--- a/payments-invoices.html
+++ b/payments-invoices.html
@@ -20,11 +20,14 @@
                     <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
                     <li><a href="employees.html"><i class="fas fa-users"></i> <span>Employees Management</span></a></li>
                     <li><a href="clients.html"><i class="fas fa-handshake"></i> <span>Clients Management</span></a></li>
-                    <li><a href="#"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
+                    <li><a href="vendors.html"><i class="fas fa-truck"></i> <span>Vendors Management</span></a></li>
                     <li class="active"><a href="payments-invoices.html"><i class="fas fa-file-invoice"></i> <span>Payments & Invoices</span></a></li>
+                    <li><a href="payroll.html"><i class="fas fa-money-check-alt"></i> <span>Payroll</span></a></li>
                     <li><a href="pensions.html"><i class="fas fa-chart-line"></i> <span>Pension Contributions</span></a></li>
                     <li><a href="taxes.html"><i class="fas fa-calculator"></i> <span>Tax Management</span></a></li>
                     <li><a href="benefits.html"><i class="fas fa-heartbeat"></i> <span>Medical & Insurance</span></a></li>
+                    <li><a href="compliance.html"><i class="fas fa-clipboard-check"></i> <span>Compliance</span></a></li>
+                    <li><a href="reports.html"><i class="fas fa-chart-bar"></i> <span>Reports & Analytics</span></a></li>
                     <li><a href="settings.html"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
                 </ul>
             </nav>
@@ -64,72 +67,164 @@
                     </div>
 
                     <div class="card">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Invoice No.</th>
-                                    <th>Client</th>
-                                    <th>Date Issued</th>
-                                    <th>Due Date</th>
-                                    <th>Total Amount</th>
-                                    <th>Status</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>INV-2025-001</td>
-                                    <td>The Church of Jesus Christ</td>
-                                    <td>May 2, 2025</td>
-                                    <td>May 15, 2025</td>
-                                    <td>₦1,569,575.00</td>
-                                    <td class="status-pending">Pending</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                        <button class="btn btn-sm btn-success"><i class="fas fa-check"></i> Mark Paid</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>INV-2025-002</td>
-                                    <td>The Church of Jesus Christ (Aba Office)</td>
-                                    <td>May 2, 2025</td>
-                                    <td>May 15, 2025</td>
-                                    <td>₦876,211.00</td>
-                                    <td class="status-paid">Paid</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>INV-2025-003</td>
-                                    <td>The Church of Jesus Christ (Owerri Office)</td>
-                                    <td>May 2, 2025</td>
-                                    <td>May 15, 2025</td>
-                                    <td>₦1,569,575.00</td>
-                                    <td class="status-pending">Pending</td>
-                                    <td>
-                                        <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
-                                        <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
-                                        <button class="btn btn-sm btn-success"><i class="fas fa-check"></i> Mark Paid</button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-responsive">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Invoice No.</th>
+                                        <th>Client</th>
+                                        <th>Date Issued</th>
+                                        <th>Due Date</th>
+                                        <th>Total Amount</th>
+                                        <th>Status</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>INV-2025-001</td>
+                                        <td>The Church of Jesus Christ</td>
+                                        <td>May 2, 2025</td>
+                                        <td>May 15, 2025</td>
+                                        <td>₦1,569,575.00</td>
+                                        <td class="status-pending">Pending</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                            <button class="btn btn-sm btn-success"><i class="fas fa-check"></i> Mark Paid</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>INV-2025-002</td>
+                                        <td>The Church of Jesus Christ (Aba Office)</td>
+                                        <td>May 2, 2025</td>
+                                        <td>May 15, 2025</td>
+                                        <td>₦876,211.00</td>
+                                        <td class="status-paid">Paid</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>INV-2025-003</td>
+                                        <td>The Church of Jesus Christ (Owerri Office)</td>
+                                        <td>May 2, 2025</td>
+                                        <td>May 15, 2025</td>
+                                        <td>₦1,569,575.00</td>
+                                        <td class="status-pending">Pending</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                            <button class="btn btn-sm btn-warning"><i class="fas fa-edit"></i> Edit</button>
+                                            <button class="btn btn-sm btn-success"><i class="fas fa-check"></i> Mark Paid</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
                 <div id="payments-received" class="tab-content" style="display: none;">
                     <div class="card">
-                        <p>Content for Payments Received will go here. This would be a table of transactions.</p>
+                        <div class="toolbar">
+                            <div class="search-filter">
+                                <input type="text" placeholder="Search payments..." class="search-input">
+                                <input type="date" class="filter-select">
+                            </div>
+                            <button class="btn btn-primary"><i class="fas fa-plus-circle"></i> Record New Payment</button>
                         </div>
+                        <div class="table-responsive">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Payment ID</th>
+                                        <th>Client</th>
+                                        <th>Amount</th>
+                                        <th>Date Received</th>
+                                        <th>Related Invoice</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>PAY-2025-001</td>
+                                        <td>The Church of Jesus Christ (Aba Office)</td>
+                                        <td>₦876,211.00</td>
+                                        <td>May 10, 2025</td>
+                                        <td>INV-2025-002</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View Details</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>PAY-2025-002</td>
+                                        <td>ABC Corporate Services</td>
+                                        <td>₦500,000.00</td>
+                                        <td>April 28, 2025</td>
+                                        <td>INV-2025-004</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View Details</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="expenses" class="tab-content" style="display: none;">
                     <div class="card">
-                        <p>Content for Expenses/Payments Made will go here. This would be a table of outgoing payments.</p>
+                        <div class="toolbar">
+                            <div class="search-filter">
+                                <input type="text" placeholder="Search expenses..." class="search-input">
+                                <select class="filter-select">
+                                    <option value="">All Categories</option>
+                                    <option value="Salaries">Salaries</option>
+                                    <option value="Utilities">Utilities</option>
+                                    <option value="Supplies">Supplies</option>
+                                </select>
+                                <input type="date" class="filter-select">
+                            </div>
+                            <button class="btn btn-primary"><i class="fas fa-plus-circle"></i> Record New Expense</button>
                         </div>
+                        <div class="table-responsive">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>Expense ID</th>
+                                        <th>Category</th>
+                                        <th>Description</th>
+                                        <th>Amount</th>
+                                        <th>Date Paid</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>EXP-2025-001</td>
+                                        <td>Salaries</td>
+                                        <td>May 2025 Payroll</td>
+                                        <td>₦2,500,000.00</td>
+                                        <td>May 31, 2025</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>EXP-2025-002</td>
+                                        <td>Utilities</td>
+                                        <td>Office Electricity Bill</td>
+                                        <td>₦75,000.00</td>
+                                        <td>May 20, 2025</td>
+                                        <td>
+                                            <button class="btn btn-sm btn-info"><i class="fas fa-eye"></i> View</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -140,4 +235,5 @@
     </div>
     <script src="js/main.js"></script>
 </body>
-</html>
+                                            </html>
+                                            
